<resources>
    <string name="app_name">Fiscal Code Calculator</string>
    <string name="first_name_label">Nome</string>
    <string name="last_name_label">Cognome</string>
    <string name="gender_label">Sesso</string>
    <string name="gender_male_label">M</string>
    <string name="gender_female_label">F</string>
    <string name="birthday_label">Data di nascita</string>
    <string name="birth_city_label">Città di nascita</string>
    <string name="calculate_btn_label">Calcola il Codice Fiscale</string>
    <string name="date_choose_btn_label">...</string>
    <string name="birth_city_hint">Scegli la città di nascita</string>
</resources>